--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Modeling Age Patterns of Under-5 Mortality
 Version: 0.1.0
 Author: Andrea Verhulst <verhulst@sas.upenn.edu>, Julio Romero <Julio.Romero-Prieto@lshtm.ac.uk>
 Maintainer: Andrea Verhulst <verhulst@sas.upenn.edu>
-Description: The package uses the method of Lagrange to implement a log-quadratic model able to estimate the age pattern of under-5 mortality by detailed age. A variety mortality inputs between 0 and 5 years can be used in order to predict a series of 22 cumulative probabilities of dying (q(x)) and mortality rates (nMx) for the first 5 years of life. See https://repository.upenn.edu/psc_publications/54/. 
+Description: The package uses the method of Lagrange to implement a log-quadratic model able to estimate the age pattern of under-5 mortality by detailed age. A variety mortality inputs between 0 and 5 years can be used in order to predict a series of 22 cumulative probabilities of dying (q(x)) and mortality rates (nMx) for the first 5 years of life. 
 License: GPL
 Encoding: UTF-8
 LazyData: true
